--- a/public/global.css
+++ b/public/global.css
@@ -2,6 +2,7 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+	/* overflow-y: hidden; */
 }
 
 body {
@@ -10,6 +11,14 @@ body {
 	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+
+	user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-webkit-user-select: none;
+
+	background-image: url("images/pattern.png");
+	background-repeat: repeat;
 }
 
 a {
